--- a/style.css
+++ b/style.css
@@ -19,16 +19,40 @@ body {
     flex-direction: column;
     flex: 1 0 auto;
     justify-content: center;
+    gap: 20px;
+    width: 90%;
+}
+
+.title, .title-top, .player-score, .computer-score {
+    display: flex;
+    justify-content: center;
+}
+
+.title-top {
+    position: fixed;
+    top: 0;
+    align-self: center;
+    margin-top: 20px;
 }
 
 #game-title {
     font-size: 80px;
     font-weight: 900;
     color: #0F0F0F;
+    text-decoration: underline;
+}
+
+.score {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    font-size: 128px;
+    font-weight: 700;
 }
 
 
-/* Button Start and Reset */
+/* Buttons general rules */
 
 button {
     border: none;
@@ -42,13 +66,15 @@ button:hover {
     color: #0F0F0F;
 }
 
+/* Button Start and Reset */
+
 .button {
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 60px;
 }
 
-.button-main {
+.button-general {
     font-size: 36px;
     font-weight: 700;
     padding: 10px;
@@ -57,6 +83,24 @@ button:hover {
     border-radius: 50%;
     outline: 2px solid #0F0F0F;
     outline-offset: 5px;
+}
+
+/* Buttons Rock Paper and Scissors */
+
+.buttons-box {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.button-play {
+    font-size: 48px;
+    font-weight: 700;
+    padding: 10px;
+    height: 110px;
+    width: 270px;
+    border-radius: 40px;
 }
 
 
