Create game logic and rest of the ui
Finished game logic. Added new div for the round result text.
Start button changed to Reset button - hidden until end of the game.

Readme updated.

--- a/style.css
+++ b/style.css
@@ -23,6 +23,14 @@ body {
     width: 90%;
 }
 
+.round-result {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: 400;
+    height: 40px;
+}
+
 .title, .title-top, .player-score, .computer-score {
     display: flex;
     justify-content: center;
